add redis cache

--- a/.env
+++ b/.env
@@ -47,3 +47,5 @@ GALERIE_PREFIX_DIRECTORY=/public
 GALERIE_IMAGE_EXTENSIONS='["jpg", "jpeg", "png"]'
 GALERIE_DESCRIPTION_FILENAMES='["description.md","readme.md","Readme.md"]'
 GALERIE_WEBPATH=http://localhost/netbs5
+
+REDIS_DSN=redis://localhos
