--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "lexik/jwt-authentication-bundle": "^2.14",
         "liip/imagine-bundle": "^2.7",
         "nelmio/cors-bundle": "^2.2",
+        "predis/predis": "^1.1",
         "sensio/framework-extra-bundle": "^6.2",
         "setasign/fpdf": "^1.8",
         "sprain/swiss-qr-bill": "^4.0",
