fix galerie bundle

--- a/.env
+++ b/.env
@@ -46,6 +46,6 @@ GALERIE_CACHE_DIRECTORY=/galerie/cache
 GALERIE_PREFIX_DIRECTORY=/public
 GALERIE_IMAGE_EXTENSIONS='["jpg", "jpeg", "png"]'
 GALERIE_DESCRIPTION_FILENAMES='["description.md","readme.md","Readme.md"]'
-GALERIE_WEBPATH=http://localhost/netbs5
+GALERIE_WEBPATH=http://localhost/netbs-v5
 
 REDIS_DSN=redis://localhos
