--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/orm": "^2.11",
+        "erusev/parsedown": "^1.7",
         "genkgo/camt": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.14",
         "liip/imagine-bundle": "^2.7",
