fix sharing with users

--- a/netBS/core/CoreBundle/Resources/config/services.yml
+++ b/netBS/core/CoreBundle/Resources/config/services.yml
@@ -90,6 +90,10 @@ services:
         tags:
             - { name: form.type }
 
+    NetBS\CoreBundle\Form\DynamicListShareType:
+        tags:
+            - { name: form.type }
+
     NetBS\CoreBundle\Twig\Extension\AssetsExtension:
         tags:
             - { name: twig.extension }
