--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 GALERIE_MAPPED_DIRECTORY=/galerie/originals
@@ -48,4 +48,9 @@ GALERIE_IMAGE_EXTENSIONS='["jpg", "jpeg", "png"]'
 GALERIE_DESCRIPTION_FILENAMES='["description.md","readme.md","Readme.md"]'
 GALERIE_WEBPATH=http://localhost/netbs-v5
 
-REDIS_DSN=redis://localhos
+REDIS_DSN=redis://localhost
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+###< google/apiclient ###
