--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.11",
         "erusev/parsedown": "^1.7",
         "genkgo/camt": "^2.3",
+        "google/apiclient": "^2.12.1",
         "lexik/jwt-authentication-bundle": "^2.14",
         "liip/imagine-bundle": "^2.7",
         "nelmio/cors-bundle": "^2.2",
@@ -82,6 +83,7 @@
         "symfony/polyfill-php72": "*"
     },
     "scripts": {
+        "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
@@ -100,7 +102,10 @@
         "symfony": {
             "allow-contrib": false,
             "require": "5.4.*"
-        }
+        },
+        "google/apiclient-services": [
+            "Calendar"
+        ]
     },
     "require-dev": {
         "symfony/browser-kit": "5.4.*",
