--- a/.env
+++ b/.env
@@ -53,3 +53,8 @@ GOOGLE_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 ###< google/apiclient ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=in-memory://
+###< symfony/messenger ###
