--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/http-client": "5.4.*",
         "symfony/intl": "5.4.*",
         "symfony/mailer": "5.4.*",
+        "symfony/messenger": "5.4.*",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/notifier": "5.4.*",
