some more changes

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -77,6 +77,10 @@ services:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
 
+    App\Subscriber\DoctrineAttributionSubscriber:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
+
     App\Subscriber\EventUserAccountSubscriber:
         tags:
             - { name: kernel.event_subscriber }
