--- a/src/Resources/config/parameters.yaml
+++ b/src/Resources/config/parameters.yaml
@@ -14,6 +14,7 @@ bs:
     fonction.weight.mailbox:            1000
 
     groupe.adabs_id:                    -1
+    groupe.apmbs_id:                    -1
     groupe.branche_eclaireurs_id:       -1
     groupe.branche_eclaireuses_id:      -1
     groupe.branche_louveteaux_id:       -1
