dont send talk notifs for now

--- a/.env
+++ b/.env
@@ -58,3 +58,7 @@ GOOGLE_CLIENT_SECRET=
 # Choose one of the transports below
 MESSENGER_TRANSPORT_DSN=in-memory://
 ###< symfony/messenger ###
+
+NEXTCLOUD_BASE_URI=localhost
+NEXTCLOUD_USER=admin
+NEXTCLOUD_PASS=pass
