--- a/netBS/core/CoreBundle/Resources/config/list.yml
+++ b/netBS/core/CoreBundle/Resources/config/list.yml
@@ -50,6 +50,10 @@ services:
         tags:
             - { name: netbs.list.renderer }
 
+    NetBS\CoreBundle\ListModel\AjaxRenderer:
+        tags:
+            - { name: netbs.list.renderer }
+
     NetBS\CoreBundle\ListModel\Column\ActionColumn:
         tags:
             - { name: netbs.list.column }
