--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -10,6 +10,12 @@ nelmio_cors:
         hosts: []
         forced_allow_origin_value: ~
     paths:
+        '^/api/v1/public/netBS/bs/apmbs':
+            allow_origin: [ '*' ]
+            allow_headers: [ '*' ]
+            allow_methods: ['GET', 'POST']
+            max_age: 3600
+
         '^/api/v1':
             allow_origin: ['*']
             allow_headers: ['*']
