--- a/.env
+++ b/.env
@@ -62,3 +62,5 @@ MESSENGER_TRANSPORT_DSN=in-memory://
 NEXTCLOUD_BASE_URI=localhost
 NEXTCLOUD_USER=admin
 NEXTCLOUD_PASS=pass
+
+GOOGLE_CALENDAR_API_KEY=""
