--- a/config/packages/google_apiclient.yaml
+++ b/config/packages/google_apiclient.yaml
@@ -2,6 +2,4 @@ services:
     Google_Client:
         class: Google_Client
         calls:
-            - [setDeveloperKey, ['%env(GOOGLE_API_KEY)%']]
-            - [setClientId, ['%env(GOOGLE_CLIENT_ID)%']]
-            - [setClientSecret, ['%env(GOOGLE_CLIENT_SECRET)%']]
+            - [setAuthConfig, ['%kernel.project_dir%/google_auth.json']]
