--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,139 +6,169 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-            - '../src/Tests/'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: "../src/"
+    exclude:
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
+      - "../src/Tests/"
 
-    App\Automatics\:
-        resource: '../src/Automatics/'
-        tags: ['netbs.list.model', 'netbs.automatic_list']
+  App\Automatics\:
+    resource: "../src/Automatics/"
+    tags: ["netbs.list.model", "netbs.automatic_list"]
 
-    App\ListModel\:
-        resource: '../src/ListModel/'
-        tags: ['netbs.list.model']
+  App\ListModel\:
+    resource: "../src/ListModel/"
+    tags: ["netbs.list.model"]
 
-    App\Searcher\:
-        resource: '../src/Searcher/'
-        tags: ['netbs.list.model', 'netbs.searcher']
+  App\Searcher\:
+    resource: "../src/Searcher/"
+    tags: ["netbs.list.model", "netbs.searcher"]
 
-    App\Binder\:
-        resource: '../src/Binder/'
-        tags: ['netbs.searcher.binder']
+  App\Binder\:
+    resource: "../src/Binder/"
+    tags: ["netbs.searcher.binder"]
 
-    App\ApiController\:
-        resource: '../src/ApiController/'
-        tags: ['controller.service_arguments']
+  App\ApiController\:
+    resource: "../src/ApiController/"
+    tags: ["controller.service_arguments"]
 
-    App\Serializer\:
-        resource: '../src/Serializer/'
-        tags: ['serializer.normalizer']
+  App\Serializer\:
+    resource: "../src/Serializer/"
+    tags: ["serializer.normalizer"]
 
-    App\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
+  App\Controller\:
+    resource: "../src/Controller/"
+    tags: ["controller.service_arguments"]
 
-    App\Exporter\:
-        resource: '../src/Exporter/'
-        tags: [ 'netbs.exporter' ]
+  App\Exporter\:
+    resource: "../src/Exporter/"
+    tags: ["netbs.exporter"]
 
-    App\Voter\:
-        resource: '../src/Voter/'
-        tags: [ 'security.voter' ]
+  App\Voter\:
+    resource: "../src/Voter/"
+    tags: ["security.voter"]
 
-    App\Serializer\MediaNormalizer:
-        arguments:
-            $webPath: '%env(GALERIE_WEBPATH)%'
-            $extension: "@twig.extension.assets"
+  App\Select2\:
+    resource: "../src/Select2/"
+    tags: ["netbs.select2_provider"]
 
-    ovesco.galerie_cache_resolver:
-        class: App\Imagine\GalerieCacheResolver
-        arguments:
-            $webPath: '%env(GALERIE_WEBPATH)%'
-        tags:
-            - { name: "liip_imagine.cache.resolver", resolver: ovesco.galerie_cache_resolver }
+  App\Serializer\MediaNormalizer:
+    arguments:
+      $webPath: "%env(GALERIE_WEBPATH)%"
+      $extension: "@twig.extension.assets"
 
-    App\Subscriber\OldFichierMapperSubscriber:
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
+  ovesco.galerie_cache_resolver:
+    class: App\Imagine\GalerieCacheResolver
+    arguments:
+      $webPath: "%env(GALERIE_WEBPATH)%"
+    tags:
+      - {
+          name: "liip_imagine.cache.resolver",
+          resolver: ovesco.galerie_cache_resolver,
+        }
 
-    App\Subscriber\DoctrineUserAccountSubscriber:
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
+  App\Subscriber\OldFichierMapperSubscriber:
+    tags:
+      - { name: doctrine.event_subscriber, connection: default }
 
-    App\Subscriber\DoctrineAttributionSubscriber:
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
+  App\Subscriber\DoctrineUserAccountSubscriber:
+    tags:
+      - { name: doctrine.event_subscriber, connection: default }
 
-    App\Subscriber\NewsPublishedSubscriber:
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
+  App\Subscriber\DoctrineAttributionSubscriber:
+    tags:
+      - { name: doctrine.event_subscriber, connection: default }
 
-    App\Subscriber\EventUserAccountSubscriber:
-        tags:
-            - { name: kernel.event_subscriber }
+  App\Subscriber\NewsPublishedSubscriber:
+    tags:
+      - { name: doctrine.event_subscriber, connection: default }
 
-    App\Subscriber\WorkerIdleSubscriber:
-        tags:
-            - { name: kernel.event_subscriber }
+  App\Subscriber\EventUserAccountSubscriber:
+    tags:
+      - { name: kernel.event_subscriber }
 
-    App\Form\MembreTypeExtension:
-        tags:
-            - { name: form.type_extension, extended_type: NetBS\FichierBundle\Form\Personne\MembreType }
+  App\Subscriber\WorkerIdleSubscriber:
+    tags:
+      - { name: kernel.event_subscriber }
 
-    App\Listener\MainMenuListener:
-        tags:
-            - { name: kernel.event_listener, event: netbs.menu.extend, method: onMenuConfigure }
+  App\Form\MembreTypeExtension:
+    tags:
+      - {
+          name: form.type_extension,
+          extended_type: NetBS\FichierBundle\Form\Personne\MembreType,
+        }
 
-    App\Listener\DashboardListener:
-        tags:
-            - { name: kernel.event_listener, event: netbs.block.pre_render_layout, method: extendsDashboard }
+  App\Listener\MainMenuListener:
+    tags:
+      - {
+          name: kernel.event_listener,
+          event: netbs.menu.extend,
+          method: onMenuConfigure,
+        }
 
-    App\Listener\PageGroupeListener:
-        tags:
-            - { name: kernel.event_listener, event: netbs.block.pre_render_layout, method: extendsPageGroupe }
+  App\Listener\DashboardListener:
+    tags:
+      - {
+          name: kernel.event_listener,
+          event: netbs.block.pre_render_layout,
+          method: extendsDashboard,
+        }
 
-    App\Form\Type\NewsChannelType:
-        tags:
-            - { name: form.type }
+  App\Listener\PageGroupeListener:
+    tags:
+      - {
+          name: kernel.event_listener,
+          event: netbs.block.pre_render_layout,
+          method: extendsPageGroupe,
+        }
 
-    App\Listener\ForceNewPasswordListener:
-        tags:
-            - { name: kernel.event_listener, event: kernel.request, method: verifyUser }
+  App\Form\Type\NewsChannelType:
+    tags:
+      - { name: form.type }
 
-    App\Listener\DoctrineMembreAdabsIdListener:
-        tags:
-            - { name: doctrine.event_listener, event: postLoad }
+  App\Listener\ForceNewPasswordListener:
+    tags:
+      - {
+          name: kernel.event_listener,
+          event: kernel.request,
+          method: verifyUser,
+        }
 
-    gedmo.listener.softdeleteable:
-        class: Gedmo\SoftDeleteable\SoftDeleteableListener
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
-        calls:
-            - [ setAnnotationReader, [ "@annotation_reader" ] ]
-    
-    App\Service\NextcloudApiCall:
-        arguments:
-            $ncUrl: '%env(NEXTCLOUD_BASE_URI)%'
-            $ncUser: '%env(NEXTCLOUD_USER)%'
-            $ncPass: '%env(NEXTCLOUD_PASS)%'
-            $env: '%env(APP_ENV)%'
+  App\Listener\DoctrineMembreAdabsIdListener:
+    tags:
+      - { name: doctrine.event_listener, event: postLoad }
 
+  gedmo.listener.softdeleteable:
+    class: Gedmo\SoftDeleteable\SoftDeleteableListener
+    tags:
+      - { name: doctrine.event_subscriber, connection: default }
+    calls:
+      - [setAnnotationReader, ["@annotation_reader"]]
+
+  App\Service\NextcloudApiCall:
+    arguments:
+      $ncUrl: "%env(NEXTCLOUD_BASE_URI)%"
+      $ncUser: "%env(NEXTCLOUD_USER)%"
+      $ncPass: "%env(NEXTCLOUD_PASS)%"
+      $env: "%env(APP_ENV)%"
+
+  App\Service\GoogleCalendarManager:
+    arguments:
+      $serviceAccountJson: "%env(json:GOOGLE_SERVICE_ACCOUNT_JSON)%"
+      $em: "@doctrine.orm.default_entity_manager"
 
 imports:
-    - { resource: "@NetBSCoreBundle/Resources/config/services.yml" }
-    - { resource: "@NetBSFichierBundle/Resources/config/services.yml" }
-    - { resource: "@NetBSSecureBundle/Resources/config/services.yml" }
-    - { resource: "@NetBSListBundle/Resources/config/services.yml" }
-    - { resource: "@OvescoFacturationBundle/Resources/config/services.yml" }
+  - { resource: "@NetBSCoreBundle/Resources/config/services.yml" }
+  - { resource: "@NetBSFichierBundle/Resources/config/services.yml" }
+  - { resource: "@NetBSSecureBundle/Resources/config/services.yml" }
+  - { resource: "@NetBSListBundle/Resources/config/services.yml" }
+  - { resource: "@OvescoFacturationBundle/Resources/config/services.yml" }
