massive apmbs update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,35 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
-    volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.php.dev
+    ports: 
+      - 80:80
+    volumes:
+      - .:/var/www/html
+  
+  db:
+    image: mariadb
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: netbs
+      MARIADB_DATABASE: netbs5
+      MARIADB_USER: root
+      MARIADB_PASSWORD: root
+    volumes:
+      - ./docker/dump:/docker-entrypoint-initdb.d
+      - ./docker/data:/var/lib/mysql:Z
+    ports:
+      - 3306:3306
+  
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8080:80
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: netbs
