--- a/config/services.yaml
+++ b/config/services.yaml
@@ -166,6 +166,10 @@ services:
       $serviceAccountJson: "%env(json:GOOGLE_SERVICE_ACCOUNT_JSON)%"
       $em: "@doctrine.orm.default_entity_manager"
 
+  App\Service\APMBSFactureExporter:
+    arguments:
+      $manager: "@doctrine.orm.default_entity_manager"
+
 imports:
   - { resource: "@NetBSCoreBundle/Resources/config/services.yml" }
   - { resource: "@NetBSFichierBundle/Resources/config/services.yml" }
